fix links for datasets

--- a/_rmd/2019-11-10-Dangerous-streets-of-Bratislava-animated-maps-using-opendata.Rmd
+++ b/_rmd/2019-11-10-Dangerous-streets-of-Bratislava-animated-maps-using-opendata.Rmd
@@ -3,7 +3,7 @@ title: Dangerous streets of Bratislava! Animated maps using open data in R
 author: "Peter Laurinec"
 layout: post
 published: no
-status: processed
+status: process
 tags: R spatial-data opendata
 draft: no
 ---
@@ -52,11 +52,11 @@ library(magick) # image handling
 
 Then, let's download the violations data from [opendata.bratislava.sk](https://opendata.bratislava.sk) webpage and translate Slovak column names to English.
 ```{r, eval=FALSE}
-data_violation_17 <- fread("https://opendata.bratislava.sk/dataset/download/852",
+data_violation_17 <- fread("https://opendata.bratislava.sk/dataset/download/pocet-priestupkov-podla-druhu-udalosti-v-roku-r/1",
                            encoding = "Latin-1")
-data_violation_18 <- fread("https://opendata.bratislava.sk/dataset/download/407",
+data_violation_18 <- fread("https://opendata.bratislava.sk/dataset/download/pocet-priestupkov-podla-druhu-udalosti-v-roku-/1",
                            encoding = "Latin-1")
-data_violation_19 <- fread("https://opendata.bratislava.sk/dataset/download/911",
+data_violation_19 <- fread("https://opendata.bratislava.sk/dataset/download/pocet-priestupkov-podla-druhu-udalosti-----ethyanzgrthar/1",
                            encoding = "Latin-1")
 
 # colnames to English
@@ -628,3 +628,5 @@ In this blog post, I showed you how to:
  * create animated maps using packages as `ggplot2`, `ggmap`, `gganimate`, and `magick`.
 
 I hope, you will use these information with your spatial-time series data combo for creating some interesting visualization :)
+
+The source code for this blog post can be found on [my GitHub repository](https://github.com/PetoLau/petolau.github.io/tree/master/_Rscripts).
